# cpu-core-instrument

./: .gitignore  CMakeLists.txt  Dockerfile.cross  README.md  build_linux.sh
include/: audio_engine.h  cli_view.h  cpu_metrics.h  cpu_sampler.h  mapper.h  shared_state.h  synth.h
platform/linux/: audio_engine_alsa.c  cpu_sampler_linux.c
platform/macos/: audio_engine_au.c  cpu_sampler_mach.c
src/: cli_view.c  cpu_metrics.c  main.c  mapper.c  synth.c
